codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__coalesced_reads_dedupe_names.snap
---
source: tui/src/history_cell.rs
assertion_line: 5166
expression: rendered
---
• Explored
  └ Read file auth.rs, shimmer.rs
