codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__coalesces_sequential_reads_within_one_call.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
• Explored
  └ Searched query shimmer_spans
    Read file shimmer.rs, status_indicator_widget.rs
