codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__multiline_command_wraps_with_extra_indent_on_subsequent_lines.snap
---
source: tui/src/history_cell.rs
assertion_line: 5194
expression: rendered
---
• Ran set -o pipefail
  │ cargo test -p codex-tui
  │ --quiet
  └ ✓ completed • 1ms
