codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__raw_mode_toggle_transcript.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
rich before:

› Please format this
  for copying

● - first item
  - second item
  
   Col     Value
  ━━━━━━  ━━━━━━━
   code    x = 1
  
  copy me
• Called
  └ workspace.inspect({"path":"README.md
        "})
    structured output
    second line

raw on:
Please format this
for copying
- first item
- second item

| Col | Value |
| --- | --- |
| code | `x = 1` |

```text
copy me
```
Called workspace.inspect({"path":"README.md"})
structured output
second line

rich after:

› Please format this
  for copying

● - first item
  - second item
  
   Col     Value
  ━━━━━━  ━━━━━━━
   code    x = 1
  
  copy me
• Called
  └ workspace.inspect({"path":"README.md
        "})
    structured output
    second line
