codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__reads_across_multiple_calls_keep_distinct_rows.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
• Explored
  └ Searched query shimmer_spans
    Read file shimmer.rs
    Read file status_indicator_widget.rs
