codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__repeated_read_names_keep_distinct_rows.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
• Explored
  └ Read file auth.rs
    Read file auth.rs
    Read file shimmer.rs
